--- a/.github/workflows/yocto.yml
+++ b/.github/workflows/yocto.yml
@@ -8,6 +8,7 @@ jobs:
     steps:
 
       - name: Install Dependencies
+        uses: actions/checkout@v1
         run: |
           sudo apt-get update
           sudo bash install.sh
