--- a/.github/workflows/yocto.yml
+++ b/.github/workflows/yocto.yml
@@ -7,14 +7,17 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
 
-      - name: Checkout Code
-        uses: actions/checkout@v1
-
       - name: Install Dependencies
         run: |
           sudo apt-get update
-          sudo bash install.sh
+          sudo apt-get install -y gawk wget git-core diffstat unzip texinfo gcc-multilib build-essential chrpath socat cpio python python3 python3-pip python3-pexpect xz-utils debianutils iputils-ping
+
+      - name: Checkout Code
+        uses: actions/checkout@v1
 
       - name: Build Image
-        run: bash build.sh
+        run: |
+          echo Starting Yocto Build process.
+          source build/sources/poky/oe-init-build-env
+          bitbake rpi-basic-image
       
